# garage_monitor

./: .gitignore  LICENSE  README.md
arduino/: .gitignore  README.md  platformio.ini
arduino/src/: _ca_cert.h  _config.h  connection_manager.cpp  connection_manager.h  debug_print.h  main.cpp  peripheral_manager.cpp  peripheral_manager.h
esp_bare_c/: .gitignore  README.md
esp_bare_c/sdk/: build.mk  init.c  link.ld  sdk.c  sdk.h  vectors.S
esp_bare_c/src/: Makefile  main.c
esp_cpp/: CMakeLists.txt  README.md
esp_cpp/components/dht22/: CMakeLists.txt  dht22.cpp  dht22.h
esp_cpp/components/mqtt_manager/: CMakeLists.txt  mqtt_manager.cpp  mqtt_manager.h
esp_cpp/components/peripheral_manager/: CMakeLists.txt  peripheral_manager.cpp  peripheral_manager.h
esp_cpp/components/wifi_manager/: CMakeLists.txt  wifi_manager.cpp  wifi_manager.h
esp_cpp/main/: _config.h  main.cpp  main.h
esp_idf/: CMakeLists.txt  README.md
esp_idf/components/mqtt_manager/: CMakeLists.txt  mqtt_manager.c  mqtt_manager.h
esp_idf/components/peripheral_manager/: CMakeLists.txt  peripheral_manager.c  peripheral_manager.h
esp_idf/components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
esp_idf/main/: _config.h  idf_component.yml  main.c
esp_rs_no_std/: .gitignore  Cargo.toml  README.md
esp_rs_no_std/src/: _config.rs  dht_adapter.rs  main.rs  mqtt_client.rs
esp_rs_std/: .gitignore  Cargo.toml  README.md
esp_rs_std/src/: _config.rs  connections.rs  main.rs
