[package]
name = "esp_rs_no_std"
version = "0.1.0"
authors = ["TristanWebber <tristan@shrunk.ai>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
critical-section = "1.1.2"
dht-sensor = "0.2.1"
embedded-hal = { version = "0.2.7", features = [ "unproven" ] }
embedded-io = "0.6.1"
esp-backtrace = { version = "0.13.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.19.0", features = [ "esp32c3" ] }
esp-println = { version = "0.10.0", features = ["esp32c3"] }
esp-wifi = { version = "0.7.1", features = [
    "esp32c3",
    "phy-enable-usb",
    "tcp",
    "utils",
    "wifi-default"
] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
mqttrust = "0.6.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 3
lto = 'off'

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
